# sp1-tendermint-example

./: .env.example  Cargo.toml  README.md  rust-toolchain
.github/workflows/: pr.yml  test.yml
abi/: SP1Tendermint.abi.json
contracts/: .env.example  .gitignore  README.md  remappings.txt
contracts/broadcast/SP1Tendermint.s.sol/11155111/: run-1713239102.json  run-1713239211.json
contracts/fixtures/: fixture.json  fixture_1:10.json  fixture_1:5.json  fixture_2:6.json  mock_fixture.json
contracts/script/: Counter.s.sol  SP1Tendermint.s.sol
contracts/src/: DummyVerifier.sol  Groth16Verifier.sol  INetworkVerifier.sol  MockGroth16Verifier.sol  SP1Tendermint.sol  SP1Verifier.sol
contracts/test/: SP1Tendermint.t.sol
operator/: .env.example  Cargo.toml  build.rs  rustfmt.toml
operator/src/: client.rs  contract.rs  lib.rs  main.rs  types.rs  util.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf  tendermint-light-client
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
scripts/: abigen.sh
