[package]
version = "0.1.0"
name = "tendermint-operator"
edition = "2021"

[[bin]]
name = "operator"
path = "bin/operator.rs"

[[bin]]
name = "fixture"
path = "bin/fixture.rs"

[[bin]]
name = "vkey"
path = "bin/vkey.rs"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", features = ["sol-types"] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tendermint = { version = "0.35.0", default-features = false }
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
bincode = "1.3.3"
itertools = "0.12.1"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
dotenv = "0.15.0"
subtle-encoding = "0.5.1"
ethers = "2.0.14"
anyhow = "1.0.82"
clap = { version = "4.0", features = ["derive", "env"] }
log = "0.4.21"
async-trait = "0.1.80"
hex = "0.4.3"
[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "277f1b4cfee5129bd40d74748f3d241cdfa56e63" }
